--- a/RDA3/14_2_Ejercicio_Listas_Simples_y_Dobles.ipynb
+++ b/RDA3/14_2_Ejercicio_Listas_Simples_y_Dobles.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6d46eb92",
    "metadata": {},
    "outputs": [],
@@ -57,18 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f5aab857",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[A] -> [B] -> [C] -> NULL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Uso de la Lista Enlazada Simple\n",
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3bceeb0c",
    "metadata": {},
    "outputs": [],
@@ -127,26 +119,16 @@
     "        while actual:\n",
     "            print(f\"[{actual.dato}]\", end=\" <-> \")\n",
     "            actual = actual.anterior\n",
-    "        print(\"NULL\")\n"
+    "        print(\"NULL\")\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "174421ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recorrido hacia adelante:\n",
-      "[A] <-> [B] <-> [C] <-> NULL\n",
-      "Recorrido hacia atrás:\n",
-      "[C] <-> [B] <-> [A] <-> NULL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Uso de la Lista Enlazada Doble\n",
@@ -180,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
