--- a/Programacion 4 Cuarto Semestre/RDA 1/1_Resolucion_ejercicio2.ipynb
+++ b/Programacion 4 Cuarto Semestre/RDA 1/1_Resolucion_ejercicio2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9e925e80",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
